# BitonicSort

./: CMakeLists.txt  CMakePresets.json  Dockerfile  Doxyfile  README.md  bitonic_sort.cl  cl_bitonic_sort.cc  conanfile.py  conanfile.txt  main.cc
.github/workflows/: main.yml
bench/: CMakeLists.txt  bench.cc  data
ci/profiles/: clang_debug.profile  clang_release.profile  debug.profile
ci/profiles/ubuntu-22.04/: clang_debug.profile
ci/profiles/windows-2022/: msvc_debug.profile  msvc_release.profile
cl_app/: CMakeLists.txt
cl_app/include/cl_app/: cl_app.hh
cl_app/src/: cl_app.cc
cl_sort/: CMakeLists.txt
cl_sort/include/cl_sort/: cl_bitonic_sort.hh
cl_sort/src/: cl_bitonic_sort.cc
cl_sort/src/shaders/: bitonic_sort.cl
driver/: CMakeLists.txt  main.cc
include/cl_application/: cl_application.hh  cl_bitonic_sort.hh
include/cl_helpers/: cl_helpers.hh
include/cl_sort/: cl_bitonic_sort.hh
profiles/: bench.profile
results/: results.csv
shaders/: bitonic_sort.cl
src/: cl_application.cc  cl_bitonic_sort.cc  cl_helpers.cc  main.cc
tests/: CMakeLists.txt
tests/e2e/: config.py  generate.py  run_tests.py
